# ncview

./: CLAUDE.md  README.md  pyproject.toml  test_osc52.py
.github/workflows/: release.yml
src/ncview/: __init__.py  __main__.py  app.py  ncview.tcss
src/ncview/utils/: clipboard.py  config.py  file_info.py  file_types.py  history.py  pins.py
src/ncview/viewers/: base.py  csv_viewer.py  fallback_viewer.py  json_viewer.py  markdown_viewer.py  parquet_viewer.py  text_viewer.py  toml_viewer.py  yaml_viewer.py
src/ncview/widgets/: confirm_screen.py  file_browser.py  history_screen.py  path_bar.py  pins_screen.py  preview_panel.py  status_bar.py
test_data/: logs.tsv  numeric_series.parquet  products.csv  sales.parquet  sample.json  sample.md  test.yaml  users.parquet
