[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ncview"
version = "0.3.16"
description = "Terminal file browser with vim keybindings"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.envs.dev]
dependencies = [
    "textual-dev>=1.0.0",
    "twine>=5.0.0",
    "build>=1.0.0",
]
detached = true

[tool.hatch.envs.dev.scripts]
deploy = ["rm -rf dist/ build/ src/*.egg-info", "python -m build", "twine upload dist/*"]

[project.scripts]
ncview = "ncview.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ncview"]
